LPS-120979 Fixing dialog z-index.

--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-web/src/main/resources/META-INF/resources/css/main.scss
@@ -218,3 +218,7 @@ textarea.script {
 		width: 100%;
 	}
 }
+
+.has-control-menu > .basecelleditor {
+	z-index: 9999 !important;
+}
